# precept

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/api/: package.json  tsconfig.json  wrangler.toml
apps/api/src/: index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: connections.ts  directors.ts  films.ts  ingest.ts  search.ts  shots.ts
apps/api/src/services/: d1.ts  r2.ts  vectorize.ts
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: AudioVisualBadge.tsx  ComparisonView.tsx  ConnectionGraph.tsx  FilmTimeline.tsx  SearchPanel.tsx  ShotCard.tsx  ShotDetail.tsx  ShotGrid.tsx  TagBrowser.tsx
apps/web/src/hooks/: useConnections.ts  useSearch.ts  useSimilarShots.ts
apps/web/src/lib/: api.ts
apps/web/src/pages/: Connections.tsx  Director.tsx  Explore.tsx  Film.tsx  Home.tsx  Shot.tsx
apps/web/src/styles/: globals.css
docs/: 01-local-pipeline-testing.md  02-cloudflare-and-repo-setup.md  03-intelligent-video-analysis-pipeline.md
scripts/: clear-local-db.ps1
services/vision-pipeline/: README.md  pyproject.toml
services/vision-pipeline/app/: __init__.py  config.py  heuristics.py  main.py  schemas.py
